[package]
name = "panser"
description = "A command line utility for (de)serializing data"
version = "0.4.1"
authors = ["Christopher Field <cfield2@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "serialization", "transcode", "deserialization"]
categories = ["encoding", "command-line-utilities", "value-formatting"]
homepage = "https://github.com/volks73/panser"
repository = "https://github.com/volks73/panser"

[[bin]]
name = "panser"
path = "src/main.rs"
doctest = false

[lib]
doc = false
doctest = false

[dependencies]
ansi_term = "0.10"
atty = "0.2"
bincode = "0.8"
byteorder = "1"
clap = "2.23"
envy = "0.3"
serde = "1.0.0"
serde_cbor = "0.6"
serde_json = "1.0.0"
#serde-hjson = "0.8"
serde-pickle = "0.4"
serde_urlencoded = "0.5"
serde_yaml = "0.7"
toml = "0.4"
rmp-serde = "0.13"

