[package]
name = "Panser"
description = "A command line utility for (de)serializing data"
version = "0.5.1"
authors = ["Christopher Field <cfield2@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["cli", "serialization", "transcode", "deserialization"]
categories = ["encoding", "command-line-utilities", "value-formatting"]
homepage = "https://github.com/volks73/panser"
repository = "https://github.com/volks73/panser"
documentation = "https://volks73.github.io/panser"
build = "build.rs"
rust-version = "1.41"

[[bin]]
name = "panser"
path = "src/main.rs"
doc = false

[lib]
name = "panser"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
bincode = "1"
byteorder = "1"
clap = "2"
envy = "0.4"
serde = "1"
serde_cbor = "0.11"
serde_json = "1"
#serde-hjson = "0.8"
serde-pickle = "1"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
toml = "0.5"
rmp-serde = "1"
